made some changes

--- a/index.css
+++ b/index.css
@@ -164,6 +164,8 @@
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
     url(f1.jpg) center center/cover no-repeat;
   padding: 50px 0;
+  flex-direction: column;
+  
 }
 
 .skills-container {
